# farkle

./: README.md  pyproject.toml  requirements.txt
src/farkle/: __init__.py  game.py  setup.py
