[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "farkle"
version = "0.0.1"
authors = [
  { name="Evan Liu", email="eliu4505@gmail.com" },
]
description = "To run simulations of the farkle dice game."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"